@startuml Player

class Player {
  - static const int MAX_LIVES = 5
  - sf::Texture normalTexture
  - sf::Texture fireTexture
  - sf::Sprite sprite
  - std::string characterName
  - Mouvement mouvement
  - sf::Keyboard::Key rightKey
  - sf::Keyboard::Key leftKey
  - sf::Keyboard::Key jumpKey
  - bool big
  - bool isDead
  - bool movingRight
  - bool movingLeft
  - bool hasFirePower
  - int lives
  - int coins
  - int fireballCooldown
  - std::vector<Fireball> fireballs
  - int currentFrame
  - int frameCounter
  - std::string characterType
  - int hitTimer
  - bool isStarPowered
  - int starPowerFrames
  - float baseSpeed
  - float currentSpeed
  - int score
  - float initialX
  - float initialY
  - float deathX
  - float deathY
  - int lastLifeThreshold
  
  + Player(texturePath: string, name: string, x: float, y: float, speed: float, right: Key, left: Key, jump: Key)
  + update(blocks: vector<sf::Sprite>&, pipes: vector<sf::Sprite>&, questionBlocks: vector<sf::Sprite>&): void
  + jump(): void
  + applyGravity(blocks: vector<sf::Sprite>&, pipes: vector<sf::Sprite>&, questionBlocks: vector<sf::Sprite>&): void
  + draw(window: sf::RenderWindow&): void
  + animate(): void
  + moveRight(): void
  + moveLeft(): void
  + isMovingRight(): bool
  + isMovingLeft(): bool
  + getPosition(): sf::Vector2f
  + setPosition(x: float, y: float): void
  + getbounds(): sf::FloatRect
  + getCoins(): void
  + loseLife(): void
  + gainLife(): void
  + addLife(): void
  + getLives(): int
  + setLives(numLives: int): void
  + grow(): void
  + shrink(): void
  + bounce(): void
  + isBig(): bool
  + die(): void
  + loadTexture(): bool
  + checkForGaps(gaps: vector<sf::FloatRect>&): void
  + getSprite(): sf::Sprite&
  + checkWin(flag: sf::Sprite&): bool
  + collectFireFlower(): void
  + shootFireball(): void
  + updateFireballs(blocks: vector<sf::Sprite>&): void
  + drawFireballs(window: sf::RenderWindow&): void
  + getFireballs(): vector<Fireball>&
  + hasFirePowerActive(): bool
  + loseFirePower(): bool
  + getScore(): int
  + getName(): string
  + setMovingRight(move: bool): void
  + setMovingLeft(move: bool): void
  + isInAir(): bool
  + getMouvement(): Mouvement&
  + isSmall(): bool
  + isHit(): bool
  + getIsDead(): bool
  + setIsDead(dead: bool): void
  + collectEtoile(): void
  + setSpeed(newSpeed: float): void
  + getSpeed(): float
  + getBaseSpeed(): float
  + respawn(): void
  + updateInitialPosition(x: float, y: float): void
  + shouldRespawn(): bool
  + addScore(points: int): void
  + updatePreviousPosition(): void
}

note top of Player
  <b>Caractéristiques Principales:</b>
  - Peut collecter des power-ups (fleur de feu, étoile)
  - Gestion des collisions avec le niveau
  - Animations selon la direction 
  - Système de points et de vies
  - Mécanisme de respawn après la mort
end note

note bottom of Player
  <b>Interaction avec d'autres classes:</b>
  - Utilise Mouvement pour les déplacements
  - Lance des Fireballs
  - Collecte des objets (Coin, FireFlower, Etoile)
end note

class Mouvement {
}

class Fireball {
}

Player -- Mouvement : utilise >
Player -- Fireball : peut utiliser >

@enduml
